# goit-web-hw-09

./: .env.example  README.md  app.py  main.py  pyproject.toml
database/: db.py  decorators.py  models.py
seed/: authors.json  seed.py
